# dataclean

./: .gitignore  pyproject.toml
src/dataclean/: __init__.py  _utils.py  cleaning.py  error_handlers.py  preprocessors.py
src/dataclean/cleaners/: auto_cleaner.py  bool_cleaner.py  col_cleaner.py  datetime_cleaner.py  drop_cleaner.py  email_cleaner.py  enum_cleaner.py  float_cleaner.py  gender_cleaner.py  int_cleaner.py  none_cleaner.py  phone_cleaner.py  postcode_cleaner.py  string_cleaner.py  uuid_cleaner.py
