[project]
name = "dataclean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "phonenumbers==9.0.14",
    "pycountry==24.6.1",
    "wordninja==2.0.0",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
